2005-10-19  Guilhem Lavaux  <guilhem@kaffe.org>

	* developers/update-vm-list: New script adapted from update-class-list
	to add the vmspecific classes to libraries/javalib/Makefile.am

2005-10-19  Guilhem Lavaux  <guilhem@kaffe.org>

	* libraries/javalib/awt-implementations/kaffe/kaffe: Moved
	directories to libraries/javalib/awt-implementations/kaffe/org/kaffe.

2005-10-19  Guilhem Lavaux  <guilhem@kaffe.org>

	* libraries/javalib/external/classpath: Imported classpath tree.

2005-10-19  Guilhem Lavaux  <guilhem@kaffe.org>

	* libraries/javalib/gnu, libraries/javalib/com, libraries/javalib/org,
	libraries/javalib/java, libraries/javalib/javax: Removed.

	* libraries/javalib/vmspecific: New directory to hold files specific
	to kaffe.

	* Makefile.am, Makefile.in, configure, configure.ac,
	developers/autogen.sh, developers/resync-classpath.sh,
	include/Makefile.am, include/Makefile.in, kaffe/kaffe/main.c,
	kaffe/kaffevm/baseClasses.c, kaffe/kaffevm/baseClasses.h,
	kaffe/kaffevm/external.h, kaffe/scripts/kaffe.in,
	libraries/clib/io/Makefile.am, libraries/clib/io/Makefile.in,
	libraries/clib/management/Classpath.c,
	libraries/clib/management/Debug.c,
	libraries/clib/management/JIT.c,
	libraries/clib/management/XProfiler.c,
	libraries/clib/math/BigInteger.c,
	libraries/clib/native/ClassLoader.c,
	libraries/clib/native/Makefile.am,
	libraries/clib/native/Makefile.in,
	libraries/clib/native/ZipFile.c,
	libraries/clib/net/Makefile.am,
	libraries/clib/net/Makefile.in,
	libraries/clib/net/NetworkInterface.c,
	libraries/clib/nio/Makefile.am,
	libraries/clib/nio/Makefile.in,
	libraries/clib/security/digest.c,
	libraries/clib/security/java.security,
	libraries/clib/zip/Adler32.c,
	libraries/clib/zip/Deflater.c,
	libraries/clib/zip/Inflater.c,
	libraries/javalib/Makefile.am,
	libraries/javalib/Makefile.am.in,
	libraries/javalib/Makefile.in,
	libraries/javalib/awt-implementations/kaffe/Makefile.am,
	libraries/javalib/awt-implementations/kaffe/Makefile.in,