@@ -1,3 +1,10 @@
+2005-10-20  Ito Kazumitsu  <kaz@maczuka.gcd.org>
+
+	* libraries/javalib/external/classpath/gnu/java/nio/charset/UTF_16Decoder.java,
+	libraries/javalib/external/classpath/gnu/java/nio/charset/UnicodeLittle.java,
+	libraries/javalib/external/classpath/gnu/java/nio/charset/iconv/IconvProvider.java:
+	Proposed patch for GCC Bugzilla Bug 23008 and 22968.
+
 2005-10-19  Guilhem Lavaux  <guilhem@kaffe.org>
 
 	* developers/update-vm-list: New script adapted from update-class-list
